<resources>
    <string name="app_name">OPSC POE</string>
    <string name="logo_name">Hour Glass Hub</string>
    <string name="slogan_name">Track Your Goals</string>
    <string name="Prog">Programming 3A</string>
    <string name="OPSC">Open Source Coding </string>
    <string name="IPMA">IT Project Management</string>
    <string name="INRS">Introduction to Research</string>
    <string name="expand_all">EXPAND ALL</string>
    <string name="Total_hours">Total Hours</string>
    <string name="delete_confirmation">Confirmation</string>
    <string name="sureToDelete">Are you sure you want to delete the task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Completed the task :) ..</string>
    <string name="sureToMarkAsComplete">Are you sure you want to mark this task as completed.</string>
    <string name="congrats_you_have_completed_the_task_successfully">Well Done!... You have completed your task successfully..</string>
    <string name="totalhours">You have spent 5 hours on this task today</string>
    <string name="fill_the_details_below">Fill the details below:</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="signup">SignUp</string>
    <string name="login_home">Login</string>
    <string name="categories">Categories</string>
    <string name="time_tracker">Time Tracker</string>
    <string name="all_tasks">All tasks</string>
    <string name="add_daily_goals">Add Daily Goals</string>
    <string name="view_graphs">View Graphs</string>
    <string name="view_next_page">View Next Page</string>
    <string name="view_previous_page">View Previous Page</string>
    <string name="fill_out_your_daily_goals">Fill out your daily goals:</string>
    <string name="minimum_daily_goal">Minimum Daily Goal</string>
    <string name="maximum_daily_goal">Maximum Daily Goal</string>
    <string name="today_s_date_dd_mm_yyyy">Today\'s Date (dd/mm/yyyy)</string>
    <string name="add_goals">Add Goals</string>
    <string name="february_2024">February 2024</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="usernameEditText">Username</string>
    <string name="passwordEditText">Password</string>
    <string name="already_have_an_account_login">Already have an account</string>
        <string name="email">Email\n</string>
        <string name="password">Password</string>
        <string name="btnSign_in">Sign in\n</string>
        <string name="confirm_password">Confirm password\n</string>
        <string name="login">Login</string>
        <string name="Sign_in">Sign in\n</string>
        <string name="Sign_up">Sign up</string>
    <string name="sign_in">sign in</string>
    <string name="add_task">Add task\n</string>
    <string name="task_description">Description\n</string>
    <string name="task_category">Category</string>
    <string name="task_date">Task Date</string>
    <string name="task_start_time">Start Time\n</string>
    <string name="task_end_time">End Time\n</string>


    <!-- Strings for expand_all_button1 and total_hours_button1 -->
    <string name="expand_all_button1">Expand All 1</string>
    <string name="total_hours_button1">Total Hours 1</string>

    <!-- Strings for expand_all_button2 and total_hours_button2 -->
    <string name="expand_all_button2">Expand All 2</string>
    <string name="total_hours_button2">Total Hours 2</string>

    <!-- Strings for expand_all_button3 and total_hours_button3 -->
    <string name="expand_all_button3">Expand All 3</string>
    <string name="total_hours_button3">Total Hours 3</string>

    <!-- Strings for expand_all_button4 and total_hours_button4 -->
    <string name="expand_all_button4">Expand All 4</string>
    <string name="total_hours_button4">Total Hours 4</string>
    <string name="log_in">Log in</string>
    <string name="todo">TODO</string>

</resources>