<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllCategories"
    android:background="@color/lightWhite">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/back_pressed"
                android:layout_width="83dp"
                android:layout_height="55dp"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/general_back_icon" />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categories"
            android:textSize="30sp"
            android:textAllCaps="true"
            android:padding="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/categories_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="20dp"
                    android:text="@string/Prog"
                    android:textColor="#ECEAEA"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/expand_all" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="-3dp"
                    android:background="#00000000"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/Total_hours" />


            </RelativeLayout>

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/categories_prog"
                android:layout_marginTop="-30dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/categories_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="20dp"
                    android:text="@string/INRS"
                    android:textColor="#ECEAEA"
                    android:textSize="19dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/expand_all" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="-3dp"
                    android:background="#00000000"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/Total_hours" />



            </RelativeLayout>

            <ImageView
                android:layout_width="105dp"
                android:layout_height="111dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-10dp"
                android:src="@drawable/categories_inrs" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/categories_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="20dp"
                    android:text="@string/OPSC"
                    android:textColor="#ECEAEA"
                    android:textSize="20dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/expand_all" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="-3dp"
                    android:background="#00000000"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/Total_hours" />



            </RelativeLayout>

            <ImageView
                android:layout_width="86dp"
                android:layout_height="108dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-10dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/categories_opsc" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/categories_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="20dp"
                    android:text="@string/IPMA"
                    android:textColor="#ECEAEA"
                    android:textSize="20dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/expand_all" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="-3dp"
                    android:background="#00000000"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/Total_hours" />



            </RelativeLayout>

            <ImageView
                android:layout_width="90dp"
                android:layout_height="94dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-2dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/categories_ipma" />
        </RelativeLayout>






    </LinearLayout>

</ScrollView>

